# sphn

./: .gitignore  Cargo.toml  README.md  pyproject.toml  stub.py
.github/workflows/: CI.yml  rust-ci.yml
py_src/sphn/: __init__.py  __init__.pyi
src/: audio.rs  dataset.rs  lib.rs  opus.rs  par_map.rs  wav.rs
test/: basic.py  stream.py
