[build-system]
requires = [
    "maturin>=1.4,<2.0",
    "cmake>=3.12",
]
build-backend = "maturin"

[project]
name = "sphn"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.maturin]
python-source = "py_src"
module-name = "sphn.sphn"
bindings = 'pyo3'
features = ["pyo3/extension-module"]
